--- a/.github/workflows/run_metagpt.yml
+++ b/.github/workflows/run_metagpt.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       idea:
-        description: '你的任务需求'
+        description: '任务需求'
         required: true
         default: '写一个简单的 Python 脚本，随机生成 10 个中奖号码'
 
@@ -20,33 +20,37 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install Dependencies
+      - name: Install MetaGPT & Dependencies
         run: |
           pip install --upgrade pip
-          pip install -e .
-          # 显式安装核心组件，确保 Linux 环境兼容性
+          # 安装当前目录下的 MetaGPT 及其依赖
+          pip install -e . 
+          # 显式补全 Linux 容器可能缺失的库
           pip install loguru pydantic-settings python-docx
 
-      - name: Run MetaGPT with Gemini
+      - name: Debug & Run MetaGPT
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          PYTHONPATH: . # 必须显式指定当前路径
+          PYTHONPATH: .
         run: |
-          # 1. 在当前目录下创建临时配置文件
-          mkdir -p config
-          cat > config/config2.yaml <<EOF
-          llm:
-            api_type: "gemini"
-            api_key: "$GEMINI_API_KEY"
-            model: "gemini-1.5-flash"
-          EOF
+          # 1. 检查 API Key 是否已正确注入 (不打印完整 Key 以保安全)
+          if [ -z "$GEMINI_API_KEY" ]; then
+            echo "错误: 未找到 GEMINI_API_KEY，请检查 GitHub Secrets 配置"
+            exit 1
+          fi
           
-          # 2. 运行 MetaGPT 并强制将日志输出到控制台以便排查
-          python3 -m metagpt.startup "${{ github.event.inputs.idea }}" --log-level INFO
+          # 2. 强制创建 config 目录并写入配置
+          mkdir -p config
+          printf "llm:\n  api_type: 'gemini'\n  api_key: '$GEMINI_API_KEY'\n  model: 'gemini-1.5-flash'\n" > config/config2.yaml
+          
+          # 3. 运行并捕获详细日志
+          echo "正在启动 MetaGPT 任务..."
+          python3 -m metagpt.startup "${{ github.event.inputs.idea }}" --log-level DEBUG
 
       - name: Upload Workspace Results
-        if: always() # 即使失败也尝试上传，方便看报错日志
+        if: always() # 无论成功失败都执行，方便排查
         uses: actions/upload-artifact@v4
         with:
           name: ai_generated_code
-          path: workspace/ # 确认该路径在 MetaGPT 运行后会自动生成
+          path: workspace/
+          if-no-files-found: warn
